--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,22 +23,17 @@ jobs:
           chmod +x ./gradlew
           ./gradlew build
 
-      # 4. .jar 파일 이름을 'app.jar'로 변경
-      - name: Rename JAR file
-        run: |
-          mv build/libs/${{ secrets.JAR_FILE_NAME }} build/libs/app.jar
-
-      # 5. 'app.jar' 파일을 EC2로 전송 (rename 옵션 제거)
+      # 4. .jar 파일 원본 이름 그대로 EC2로 전송
       - name: Deploy to EC2
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST_IP }}
           username: ${{ secrets.HOST_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "build/libs/app.jar"  # <-- 이름을 바꾼 app.jar를 복사
-          target: "~/fiv5"            # <-- rename 옵션 제거
+          source: "build/libs/${{ secrets.JAR_FILE_NAME }}"  # (중요) 원본 파일
+          target: "~/fiv5"                                  # (중요) 'rename' 옵션 완전 삭제
 
-      # 6. EC2에서 배포 스크립트 실행
+      # 5. EC2에서 배포 스크립트 실행 (JAR 파일 이름을 인자로 전달)
       - name: Execute Deploy Script
         uses: appleboy/ssh-action@master
         with:
@@ -46,4 +41,4 @@ jobs:
           username: ${{ secrets.HOST_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            bash ~/deploy.sh
+            bash ~/deploy.sh ${{ secrets.JAR_FILE_NAME }} # (중요) 파일 이름을 인자로 전달
