--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -22,6 +22,11 @@ spring:
     console:
       enabled: true
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
 jwt:
   secret-key: TestSecretKeyForJwtTokenProvider1234567890
   access-token-validity-seconds: 3600
