feat: add refresh token

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: "jdbc:h2:mem:testdb" # 테스트용 인메모리 DB
+    url: "jdbc:h2:mem:testdb"
     driverClassName: org.h2.Driver
     username: sa
-    password: "" # 비밀번호 없음
+    password: ""
 
   cloud:
     aws:
@@ -12,12 +12,11 @@ spring:
       stack:
         auto: false
       region:
-        static: ap-northeast-2 # (필수) 리전은 명시해야 함
+        static: ap-northeast-2
 
-  # (선택 사항) JPA를 사용하는 경우, H2 콘솔 활성화
   jpa:
     hibernate:
-      ddl-auto: create-drop # 테스트 실행 시 스키마 생성, 완료 시 삭제
+      ddl-auto: create-drop
   h2:
     console:
       enabled: true
@@ -30,6 +29,7 @@ spring:
 jwt:
   secret-key: TestSecretKeyForJwtTokenProvider1234567890
   access-token-validity-seconds: 3600
+  refresh-token-validity-seconds: 2592000
 
 firebase:
   service-account-path: "dummy-test-path.json"
