--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,12 @@
-name: Java CI/CD to EC2
+name: Java CI/CD to EC2 (OIDC)
 
 on:
   push:
     branches: [ "main" ]
+
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   build-and-deploy:
@@ -23,23 +27,21 @@ jobs:
           chmod +x ./gradlew
           ./gradlew build
 
-      # 4. .jar 파일 EC2로 전송 (파일 이름 하드코딩)
-      - name: Deploy to EC2
-        uses: appleboy/scp-action@master
+      - name: Configure AWS credentials (OIDC)
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          host: ${{ secrets.HOST_IP }}
-          username: ${{ secrets.HOST_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "build/libs/loci-0.0.1-SNAPSHOT.jar"
-          target: "~/loci"
-          strip_components: 2
+          role-to-assume: arn:aws:iam::234411838699:role/github-actions-ci-role
+          aws-region: ap-northeast-2
 
-      # 5. EC2에서 배포 스크립트 실행 (JAR 파일 이름을 인자로 전달)
-      - name: Execute Deploy Script
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST_IP }}
-          username: ${{ secrets.HOST_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            bash ~/deploy.sh fiv5-0.0.1-SNAPSHOT.jar prod
+      - name: Upload to S3
+        run: |
+          aws s3 cp ./build/libs/loci-0.0.1-SNAPSHOT.jar \
+            s3://loci-assets-bucket/loci-be.jar
+
+      - name: Deploy to EC2 via SSM
+        run: |
+          aws ssm send-command \
+            --document-name "AWS-RunShellScript" \
+            --targets "Key=instanceids,Values=i-00423a24e42080138" \
+            --comment "Deploy Loci Backend" \
+            --parameters 'commands=["/home/ubuntu/deploy.sh"]'
