--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,4 +1,4 @@
-name: Java CI/CD to EC2 (OIDC)
+name: Deploy to Prod (OIDC)
 
 on:
   push:
@@ -9,9 +9,8 @@ permissions:
   contents: read
 
 jobs:
-  build-and-deploy:
+  build-and-deploy-prod:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -27,21 +26,21 @@ jobs:
           chmod +x ./gradlew
           ./gradlew build -x test
 
-      - name: Configure AWS credentials (OIDC)
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::234411838699:role/github-actions-ci-role
           aws-region: ap-northeast-2
 
-      - name: Upload to S3
+      - name: Upload to S3 (Prod)
         run: |
           aws s3 cp ./build/libs/loci-0.0.1-SNAPSHOT.jar \
-            s3://loci-assets-bucket/loci-be.jar
+            s3://loci-assets-bucket/loci-prod.jar
 
-      - name: Deploy to EC2 via SSM
+      - name: Deploy to Prod EC2 via SSM
         run: |
           aws ssm send-command \
             --document-name "AWS-RunShellScript" \
-            --targets "Key=instanceids,Values=i-00423a24e42080138" \
-            --comment "Deploy Loci Backend" \
+            --targets "Key=instanceids,Values=${{ secrets.PROD_INSTANCE_ID }}" \
+            --comment "Deploy Loci Prod" \
             --parameters 'commands=["/home/ubuntu/deploy.sh"]'
