--- a/build.gradle
+++ b/build.gradle
@@ -43,27 +43,19 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
-
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
-
     implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'
-
     implementation 'com.google.firebase:firebase-admin:9.3.0'
-
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
-
     implementation 'com.uber:h3:4.1.1'
-
     implementation 'com.googlecode.libphonenumber:libphonenumber:8.13.26'
-
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter-parameter-store'
 }
 
 tasks.named('test') {
