feat: change ci/cd script

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -39,8 +39,31 @@ jobs:
 
       - name: Deploy to Dev EC2 via SSM
         run: |
-          aws ssm send-command \
+          COMMAND_ID=$(aws ssm send-command \
             --document-name "AWS-RunShellScript" \
             --targets "Key=instanceids,Values=${{ secrets.DEV_INSTANCE_ID }}" \
             --comment "Deploy Loci Dev" \
-            --parameters 'commands=["/home/ubuntu/deploy.sh"]'
+            --parameters 'commands=["/home/ubuntu/deploy.sh"]' \
+            --query "Command.CommandId" \
+            --output text)
+
+          aws ssm wait command-executed \
+            --command-id "$COMMAND_ID" \
+            --instance-id "${{ secrets.DEV_INSTANCE_ID }}"
+
+          OUTPUT=$(aws ssm get-command-invocation \
+            --command-id "$COMMAND_ID" \
+            --instance-id "${{ secrets.DEV_INSTANCE_ID }}" \
+            --output json)
+
+          STATUS=$(echo $OUTPUT | jq -r '.Status')
+          echo "Command Status: $STATUS"
+
+          if [ "$STATUS" != "Success" ]; then
+            echo "Deployment Failed!"
+            echo $OUTPUT | jq -r '.StandardErrorContent'
+            exit 1
+          fi
+
+          echo "Deployment Success!"
+          echo $OUTPUT | jq -r '.StandardOutputContent'
