--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -32,6 +32,7 @@ jobs:
           role-to-assume: arn:aws:iam::234411838699:role/github-actions-ci-role
           aws-region: ap-northeast-2
 
+      # [주의] Prod 서버의 deploy.sh가 loci-prod.jar를 당겨오도록 설정되어 있어야 합니다.
       - name: Upload to S3 (Prod)
         run: |
           aws s3 cp ./build/libs/loci-0.0.1-SNAPSHOT.jar \
@@ -39,8 +40,31 @@ jobs:
 
       - name: Deploy to Prod EC2 via SSM
         run: |
-          aws ssm send-command \
+          COMMAND_ID=$(aws ssm send-command \
             --document-name "AWS-RunShellScript" \
             --targets "Key=instanceids,Values=${{ secrets.PROD_INSTANCE_ID }}" \
             --comment "Deploy Loci Prod" \
-            --parameters 'commands=["/home/ubuntu/deploy.sh"]'
+            --parameters 'commands=["/home/ubuntu/deploy.sh"]' \
+            --query "Command.CommandId" \
+            --output text)
+
+          aws ssm wait command-executed \
+            --command-id "$COMMAND_ID" \
+            --instance-id "${{ secrets.PROD_INSTANCE_ID }}"
+
+          OUTPUT=$(aws ssm get-command-invocation \
+            --command-id "$COMMAND_ID" \
+            --instance-id "${{ secrets.PROD_INSTANCE_ID }}" \
+            --output json)
+
+          STATUS=$(echo $OUTPUT | jq -r '.Status')
+          echo "Command Status: $STATUS"
+
+          if [ "$STATUS" != "Success" ]; then
+            echo "Deployment Failed!"
+            echo $OUTPUT | jq -r '.StandardErrorContent'
+            exit 1
+          fi
+
+          echo "Deployment Success!"
+          echo $OUTPUT | jq -r '.StandardOutputContent'
