--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -52,23 +52,36 @@ jobs:
           echo "SSM Command ID: $COMMAND_ID"
           echo "⏳ Waiting for deployment to finish (Max 10 mins)..."
 
-          # 2. 배포 완료 대기 (10초 간격, 최대 60회 = 10분)
-          aws ssm wait command-executed \
-            --command-id "$COMMAND_ID" \
-            --instance-id "${{ secrets.PROD_INSTANCE_ID }}" \
-            --delay 10 \
-            --max-attempts 60
+          # 2. 배포 완료 대기 (Loop 방식: 10초 * 60회)
+          STATUS="InProgress"
+          count=0
+          while [ "$STATUS" == "InProgress" ] || [ "$STATUS" == "Pending" ]; do
+            if [ $count -ge 60 ]; then
+              echo "⏰ Timeout: Deployment took longer than 10 minutes."
+              exit 1
+            fi
+          
+            sleep 10
+            STATUS=$(aws ssm get-command-invocation \
+              --command-id "$COMMAND_ID" \
+              --instance-id "${{ secrets.PROD_INSTANCE_ID }}" \
+              --query "Status" \
+              --output text)
+          
+            echo "Current Status: $STATUS (Attempt $((count+1))/60)"
+            count=$((count+1))
+          done
 
-          # 3. 배포 결과 조회
+          # 3. 배포 결과 조회 및 출력
           OUTPUT=$(aws ssm get-command-invocation \
             --command-id "$COMMAND_ID" \
             --instance-id "${{ secrets.PROD_INSTANCE_ID }}" \
             --output json)
 
-          STATUS=$(echo $OUTPUT | jq -r '.Status')
-          echo "Command Status: $STATUS"
+          FINAL_STATUS=$(echo $OUTPUT | jq -r '.Status')
+          echo "Final Command Status: $FINAL_STATUS"
 
-          if [ "$STATUS" != "Success" ]; then
+          if [ "$FINAL_STATUS" != "Success" ]; then
             echo "❌ Deployment Failed!"
             echo "--- Standard Error ---"
             echo $OUTPUT | jq -r '.StandardErrorContent'
@@ -79,7 +92,7 @@ jobs:
           echo "--- Deploy Script Output ---"
           echo $OUTPUT | jq -r '.StandardOutputContent'
 
-          # 4. 실행 중인 포트 확인 (추가된 부분)
+          # 4. 실행 중인 포트 확인 (Loop 방식)
           echo "🔍 Checking Active Service Port..."
           
           PORT_CHECK_ID=$(aws ssm send-command \
@@ -90,11 +103,19 @@ jobs:
             --query "Command.CommandId" \
             --output text)
           
-          aws ssm wait command-executed \
-            --command-id "$PORT_CHECK_ID" \
-            --instance-id "${{ secrets.PROD_INSTANCE_ID }}" \
-            --delay 2 \
-            --max-attempts 5
+          # 짧게 대기 (2초 * 5회)
+          STATUS="InProgress"
+          count=0
+          while [ "$STATUS" == "InProgress" ] || [ "$STATUS" == "Pending" ]; do
+             if [ $count -ge 5 ]; then break; fi
+             sleep 2
+             STATUS=$(aws ssm get-command-invocation \
+               --command-id "$PORT_CHECK_ID" \
+               --instance-id "${{ secrets.PROD_INSTANCE_ID }}" \
+               --query "Status" \
+               --output text)
+             count=$((count+1))
+          done
           
           PORT_OUTPUT=$(aws ssm get-command-invocation \
             --command-id "$PORT_CHECK_ID" \
