--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -11,6 +11,7 @@ permissions:
 jobs:
   build-and-deploy-prod:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -26,21 +27,25 @@ jobs:
           chmod +x ./gradlew
           ./gradlew build -x test
 
-      - name: Configure AWS credentials
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::234411838699:role/github-actions-ci-role
           aws-region: ap-northeast-2
 
-      - name: Upload to S3 (Prod)
+      - name: Upload JAR to S3 (Prod)
         run: |
-          aws s3 cp ./build/libs/loci-0.0.1-SNAPSHOT.jar \
-            s3://loci-assets-bucket/loci-prod.jar
+          JAR_FILE=$(ls build/libs/*.jar | grep -v plain | head -n 1)
+          echo "Uploading $JAR_FILE"
+          aws s3 cp "$JAR_FILE" s3://loci-assets-bucket/loci-prod.jar
 
       - name: Deploy to Prod EC2 via SSM
         run: |
-          # 1. 배포 스크립트 실행 명령 전송
-          echo "🚀 Sending Deploy Command..."
+          echo "🚀 Sending deploy command to EC2 (Prod)..."
+
           COMMAND_ID=$(aws ssm send-command \
             --document-name "AWS-RunShellScript" \
             --targets "Key=instanceids,Values=${{ secrets.PROD_INSTANCE_ID }}" \
@@ -50,77 +55,57 @@ jobs:
             --output text)
 
           echo "SSM Command ID: $COMMAND_ID"
-          echo "⏳ Waiting for deployment to finish (Max 10 mins)..."
+          echo "⏳ Waiting for deployment result..."
 
-          # 2. 배포 완료 대기 (Loop 방식: 10초 * 60회)
           STATUS="InProgress"
           count=0
-          while [ "$STATUS" == "InProgress" ] || [ "$STATUS" == "Pending" ]; do
+
+          while [ "$STATUS" = "InProgress" ] || [ "$STATUS" = "Pending" ]; do
             if [ $count -ge 60 ]; then
-              echo "⏰ Timeout: Deployment took longer than 10 minutes."
+              echo "❌ Deployment timeout (10 minutes)"
               exit 1
             fi
-          
+
             sleep 10
             STATUS=$(aws ssm get-command-invocation \
               --command-id "$COMMAND_ID" \
               --instance-id "${{ secrets.PROD_INSTANCE_ID }}" \
               --query "Status" \
               --output text)
-          
-            echo "Current Status: $STATUS (Attempt $((count+1))/60)"
+
+            echo "Current Status: $STATUS ($((count+1))/60)"
             count=$((count+1))
           done
 
-          # 3. 배포 결과 조회 및 출력
           OUTPUT=$(aws ssm get-command-invocation \
             --command-id "$COMMAND_ID" \
             --instance-id "${{ secrets.PROD_INSTANCE_ID }}" \
             --output json)
 
-          FINAL_STATUS=$(echo $OUTPUT | jq -r '.Status')
-          echo "Final Command Status: $FINAL_STATUS"
+          FINAL_STATUS=$(echo "$OUTPUT" | jq -r '.Status')
 
           if [ "$FINAL_STATUS" != "Success" ]; then
-            echo "❌ Deployment Failed!"
-            echo "--- Standard Error ---"
-            echo $OUTPUT | jq -r '.StandardErrorContent'
+            echo "❌ Deploy script failed"
+            echo "--- STDERR ---"
+            echo "$OUTPUT" | jq -r '.StandardErrorContent'
             exit 1
           fi
 
-          echo "✅ Deployment Success!"
-          echo "--- Deploy Script Output ---"
-          echo $OUTPUT | jq -r '.StandardOutputContent'
+          echo "✅ Deploy script finished successfully"
 
-          # 4. 실행 중인 포트 확인 (Loop 방식)
-          echo "🔍 Checking Active Service Port..."
-          
-          PORT_CHECK_ID=$(aws ssm send-command \
-            --document-name "AWS-RunShellScript" \
-            --targets "Key=instanceids,Values=${{ secrets.PROD_INSTANCE_ID }}" \
-            --comment "Check Active Port" \
-            --parameters 'commands=["ps -ef | grep java | grep -v grep | grep server.port"]' \
-            --query "Command.CommandId" \
-            --output text)
-          
-          # 짧게 대기 (2초 * 5회)
-          STATUS="InProgress"
-          count=0
-          while [ "$STATUS" == "InProgress" ] || [ "$STATUS" == "Pending" ]; do
-             if [ $count -ge 5 ]; then break; fi
-             sleep 2
-             STATUS=$(aws ssm get-command-invocation \
-               --command-id "$PORT_CHECK_ID" \
-               --instance-id "${{ secrets.PROD_INSTANCE_ID }}" \
-               --query "Status" \
-               --output text)
-             count=$((count+1))
+      - name: Verify Production Service Health
+        run: |
+          echo "🔍 Checking production service health..."
+
+          for i in {1..20}; do
+            if curl -fs https://api-prod.loci.my/health > /dev/null; then
+              echo "✅ Production service is healthy"
+              exit 0
+            fi
+
+            echo "⏳ Waiting for service to become healthy ($i/20)"
+            sleep 5
           done
-          
-          PORT_OUTPUT=$(aws ssm get-command-invocation \
-            --command-id "$PORT_CHECK_ID" \
-            --instance-id "${{ secrets.PROD_INSTANCE_ID }}" \
-            --output json)
-          
-          echo "--- Active Java Process ---"
-          echo $PORT_OUTPUT | jq -r '.StandardOutputContent'
+
+          echo "❌ Production service health check failed"
+          exit 1
